<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context="rs.tfzr.mtipstudenti.PretragaFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainContainerPretraga"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewPretragaStudenata"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:text="@string/MTIPStudentiPregragaFragmentNaziv" />

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:weightSum="1">

            <EditText
                android:id="@+id/editTextPrezimePretraga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:ems="10"
                android:focusedByDefault="false"
                android:hint="@string/MTIPStudentiFragmentHintPrezime"
                android:inputType="text"
                android:paddingTop="10dp"></EditText>

            <ImageView
                android:id="@+id/imageViewPretraga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:src="@drawable/nav_pretraga" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewDodajNovogStudenta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/MTIPStudentiDodajNovogStudenta" />

        <ScrollView
            android:id="@+id/scrollViewRezultatiPretrage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutRezultatiPretrage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"></LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>